# boatstuff

./: .gitignore  .pre-commit-config.yaml  .sync-files.txt  404.html  README.md  _config.yml  mkdocs.yml  nmea_wifi_options.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  observ-deploy.yaml
data/systems/NMEA_Wifi_Options/: Sheet_1.sqlite
docs/: nmea_wifi.md  test.md
hooks/: pre-commit
nmea_wifi/: index.html
search/: search_index.json
src/: checklists.md  index.md  nmea-wifi.md  nmea_wifi.md
src/data/: NMEA_Wifi_Options.xlsx  checklists.zip.py  nmea_wifi.zip.py  numbers_to_zip_db.py
src/notebooks/: nmea_wifi.py
src/numbers/: NMEA_Wifi_Options.numbers  checklists.numbers
src/numbers/checklists.numbers/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
src/prepare/: numbers_to_sqlite.py
test/: index.html
